<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="action_settings">Settings</string>
    <string name="upload_in_progress">Uploading</string>
    <string name="upload_progress_message">Please wait while your documents are being uploaded</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="sign_here">Sign Here</string>
    <string name="drivers_license">Driver\'s License</string>
    <string name="cancel_photo_capture">CANCEL</string>
    <string name="retake">RETAKE</string>
    <string name="use">USE</string>
    <string name="unable_to_open_camera">Unable to Open Camera. Another application is using it?</string>
    <string name="profile_photo">PROFILE PHOTO</string>
    <string name="continue_next">Continue</string>
    <string name="your_are_almost_done">You are almost done</string>
    <string name="take_a_selfie">Take a selfie</string>
    <string name="official_id">Official ID</string>
    <string name="choose_document_type">Choose Document Type</string>
    <string name="umid">UMID</string>
    <string name="please_wait">Please Wait...</string>
    <string name="facebook">Facebook</string>
    <string name="upload_official_id">Upload Official IDs</string>
    <string name="document_upload_incomplete">Less than the minimum required document uploads (minimum %s)</string>
    <string name="new_account">New Account</string>
    <string name="application_summary">Summary</string>
    <string name="next">Next</string>
    <string name="edit">EDIT</string>
    <string name="document_upload">Document Upload</string>
    <string name="title_activity_take_photo">Take a photo</string>
    <string name="confirm_delete">Are you sure you want to delete this document?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="fit_document_inside_frame_place_on_contrasting_background">Fit document inside frame.\nPlace on contrasting background.</string>
    <string name="center_your_face_within_the_frame_and_look_directly_into_the_camera">Center your face within the frame and look directly into the camera.</string>
    <string name="upload">Upload</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="thank_you_header">Thank you</string>
    <string name="problem_while_sending_to_server">There was a problem while sending your documents to the server. Please check your internet connection</string>
    <string name="retry">Retry</string>
    <string name="sending_application_message">Please keep your internet connection while sending your documents</string>
    <string name="thank_you">Thank You</string>
    <string name="application_id">Reference Number</string>
    <string name="close">Close</string>
    <string name="review_and_submit">Review and Submit</string>
    <string name="submit_documents_notice">By clicking enable, you allow this app and Google to use your information in accordance with the terms of service and privacy policy. You can change this and any other account permsissions at any time.</string>
    <string name="submit">Submit</string>
    <string name="add_more">Add more pages</string>
    <string name="delete">DELETE</string>
    <string name="error_camera_permission_denied">Error: Camera permission denied.</string>
    <string name="settings">SETTINGS</string>
    <string name="preview_document">Preview Document</string>
    <string name="success_sending_to_server">You have successfully uploaded your documents.</string>
    <string name="success_connecting_online_accounts">You have successfully connected your online accounts.</string>
    <string name="back_to_home">BACK TO HOME</string>
    <string name="connect_your_online_accounts">Connect your online accounts</string>

    <!-- Strings related to barcode scanner -->
    <string name="title_scan_qr_code">Scan QR Code</string>
    <string name="qr_code_scanner_notes">Place the code in the center of the\nsquare to scan automatically</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <string name="title_activity_document_group">Upload your documents</string>
    <string name="title_activity_document_list">DocumentListActivity</string>
    <string name="title_activity_capture_document">CaptureDocumentActivity</string>
    <string name="title_activity_document_upload">DocumentUploadActivity</string>
</resources>
