<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kyc_light_background"
    tools:context="com.lenddo.kyc.fragments.ScanOfficialIDIntroFragment">

    <RelativeLayout
        android:id="@+id/kyc_panel"
        android:background="@color/kyc_top_panel_background"
        android:layout_width="match_parent"
        android:layout_height="290dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/profile_photo"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:src="@drawable/ic_badge_selfie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/continue_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_secondary_panel"
            android:text="@string/continue_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_icon_arrow_right_blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/continue_button"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center_horizontal"
            android:text="@string/your_are_almost_done"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/take_profile_photo_container"
            style="@style/UploadContainerStyle">

            <TextView
                android:id="@+id/item_text"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/take_a_selfie" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
